--- a/theseus/index.html
+++ b/theseus/index.html
@@ -45,37 +45,31 @@
   </style>
 
 <style>
-  /* Adjust this so "10" fits nicely */
-  .chapters-grid { 
-    --cell: 52px;                 /* button cell width */
+  .chapters-grid{
+    /* Tweak --cell if your buttons feel tight; 60–64px is comfy for “19” */
+    --cell: 60px;
     display: grid;
     grid-template-columns: repeat(12, var(--cell));
-    column-gap: 0.5rem;           /* space between label & 1, and between buttons */
+    column-gap: 0.5rem;  /* space between label & 1, and between buttons */
     row-gap: 0.5rem;
     align-items: center;
+    overflow-x: auto;     /* keeps two-line layout usable on narrow screens */
+    padding-bottom: 0.25rem; /* room for possible scrollbar */
   }
-  /* Label = two cells on the FIRST row (so row 2 can start under it) */
-  .chapter-label {
-    grid-column: 1 / span 2; 
+  .chapter-label{
+    grid-column: 1 / span 2;  /* label uses first two cells on line 1 */
     grid-row: 1;
-    white-space: nowrap;
+    white-space: nowrap;       /* keep the label on one line */
   }
-  /* Buttons are exactly one cell wide, so they align perfectly */
-  .chapter-btn {
-    width: var(--cell);
+  .chapter-btn{
+    inline-size: var(--cell);  /* equal width buttons */
     text-align: center;
   }
-
-  /* Mobile fallback: let them wrap naturally */
-  @media (max-width: 576px) {
-    .chapters-grid { 
-      display: flex; 
-      flex-wrap: wrap; 
-      gap: 0.5rem; 
-      align-items: center;
-    }
-    .chapter-label { margin-right: 0.5rem; }
-    .chapter-btn { width: auto; min-width: 45px; }
+  /* Invisible 1-cell filler to push “10” to the next row */
+  .spacer{
+    inline-size: var(--cell);
+    height: 1px;
+    opacity: 0;
   }
 </style>
 
@@ -341,6 +335,7 @@
   <div class="chapters-grid">
     <strong class="chapter-label">Jump to chapter:</strong>
 
+    <!-- Row 1 (after label): 1–9 -->
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
@@ -350,6 +345,11 @@
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch7">7</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
+
+    <!-- Filler to occupy the last cell of row 1 so 10 moves to row 2 -->
+    <span class="spacer" aria-hidden="true"></span>
+
+    <!-- Row 2: 10–19 (10 starts at col 1; 12 ends up under 1) -->
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
