--- a/theseus/index.html
+++ b/theseus/index.html
@@ -346,7 +346,7 @@
   <div class="chapters-grid">
     <strong class="chapter-label">Jump to chapter:</strong>
 
-    <!-- Row 1 (after label): 1–9 -->
+    <!-- Row 1: 1–9 -->
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
@@ -357,10 +357,7 @@
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
 
-    <!-- Push 10 to next line on desktop layout -->
-    <span class="spacer" aria-hidden="true"></span>
-
-    <!-- Row 2: 10–19 (12 sits under 1) -->
+    <!-- Row 2: 10–19 (starts under the label; 12 sits under 1) -->
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
@@ -373,6 +370,7 @@
     <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
   </div>
 </div>
+
 
 
     <!-- ========= CHAPTER 2 ========= -->
