--- a/theseus/index.html
+++ b/theseus/index.html
@@ -343,34 +343,29 @@
 
 <!-- Jump to chapters -->
 <div class="alert alert-light border jumpbar" id="chapters">
-  <div class="chapters-grid">
-    <strong class="chapter-label">Jump to chapter:</strong>
-
-    <!-- Row 1: 1–9 -->
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch4">4</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch5">5</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch6">6</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch7">7</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
-
-    <!-- Row 2: 10–19 (starts under the label; 12 sits under 1) -->
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch13">13</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch14">14</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch15">15</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch16">16</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
-    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
-  </div>
+  <strong class="mr-2">Jump to chapter:</strong>
+  <br><br>
+  <a class="btn btn-sm btn-outline-primary" href="#ch1">1</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch2">2</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch3">3</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch4">4</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch5">5</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch6">6</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch7">7</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch8">8</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch9">9</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch10">10</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch11">11</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch12">12</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch13">13</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch14">14</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch15">15</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch16">16</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch17">17</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch18">18</a>
+  <a class="btn btn-sm btn-outline-primary" href="#ch19">19</a>
 </div>
-
+<hr>
 
 
     <!-- ========= CHAPTER 2 ========= -->
