--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -135,27 +135,6 @@
     </div>
   </div>
 
-  <!-- Jump to chapters -->
-  <div class="alert alert-light border jumpbar" id="chapters">
-    <strong class="mr-2">Jump to chapter:</strong>
-    <a class="btn btn-sm btn-outline-primary" href="#ch2">2</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch3">3</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch4">4</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch5">5</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch6">6</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch7">7</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch8">8</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch9">9</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch10">10</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch11">11</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch12">12</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch13">13</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch14">14</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch15">15</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch16">16</a>
-    <a class="btn btn-sm btn-outline-primary" href="#ch17">17</a>
-  </div>
-</div>
 
 
 <!-- CH 2 -->
@@ -241,6 +220,35 @@
 
   </div>
 </section>
+
+
+
+<!-- Jump to chapters -->
+<div class="alert alert-light border jumpbar" id="chapters">
+  <div class="d-flex flex-wrap align-items-center gap-2">
+    <strong class="mr-2">Jump to chapter:</strong>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch4">4</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch5">5</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch6">6</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch7">7</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch13">13</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch14">14</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch15">15</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch16">16</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
+  </div>
+</div>
+
 
 <!-- CH 3 -->
 <section id="ch3" class="section-box">
@@ -373,6 +381,35 @@
     </ul>
   </div>
 </section>
+
+
+
+<!-- Jump to chapters -->
+<div class="alert alert-light border jumpbar" id="chapters">
+  <div class="d-flex flex-wrap align-items-center gap-2">
+    <strong class="mr-2">Jump to chapter:</strong>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch1">1</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch2">2</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch3">3</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch4">4</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch5">5</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch6">6</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch7">7</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch8">8</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch9">9</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch10">10</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch11">11</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch12">12</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch13">13</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch14">14</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch15">15</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch16">16</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch17">17</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch18">18</a>
+    <a class="btn btn-sm btn-outline-primary chapter-btn" href="#ch19">19</a>
+  </div>
+</div>
+
 
 <!-- CH 4 -->
 <section id="ch4" class="section-box">
