--- a/theseus/files/index.html
+++ b/theseus/files/index.html
@@ -22,6 +22,17 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
   <link rel="stylesheet" href="https://kennethbunker.github.io/sass/researcher.min.css">
 
+<style>
+  .chapter-btn {
+    min-width: 45px;  /* big enough for "19" */
+    text-align: center;
+  }
+  .gap-2 {
+    gap: 0.5rem; /* ensures spacing on wrap */
+  }
+</style>
+
+
   <style>
     body { margin: 40px; }
     img { display: block; margin-left: auto; margin-right: auto; }
