--- a/theseus/index.html
+++ b/theseus/index.html
@@ -281,7 +281,7 @@
     <div id="ch1" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
         <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br><br>
-        CHAPTER 1: From stability to upheaval<br><br>
+        <em>CHAPTER 1: From stability to upheaval</em><br><br>
 
         <strong>Author:</strong>
         <a href="https://orcid.org/0000-0002-4579-6132" style="text-decoration:none; color:#000; font-weight:bold;">
@@ -340,7 +340,7 @@
     <div id="ch2" style="border:1px solid #999; border-radius:12px; padding:40px 20px; margin:40px auto; max-width:700px; text-align:center; box-sizing:border-box;">
       <div style="margin:0;">
         <strong>CHILE'S TRANSFORMATION AMIDST CRISIS: THE THESEUS PARADOX</strong><br>
-        <em>CHAPTER 2: THE 1980 CONSTITUTION</em><br><br>
+        <em>CHAPTER 2: The 1980 Constitution</em><br><br>
 
         <strong>Author:</strong>
         <a href="https://orcid.org/0000-0002-4579-6132" style="text-decoration:none; color:#000; font-weight:bold;">
@@ -362,7 +362,7 @@
         <div style="text-align:left; max-width:600px; margin:0 auto;">
           <p style="font-size:14px; line-height:1.6;">
             <strong>Abstract: </strong>This chapter examines the origins, design, and long-term impact of Chile’s 1980 Constitution, drafted under Augusto Pinochet’s military regime in the aftermath of the 1973 coup. It argues that the document was shaped by political priorities aimed at ensuring system stability through a “protected democracy” and economic objectives rooted in neoliberal principles. By concentrating power in the executive while limiting the authority of Congress, the Constitution formalized military oversight as a safeguard against instability and fragmentation. Simultaneously, it institutionalized a subsidiary role for the state, prioritizing privatization, deregulation, and protections for private property, diverging sharply from the 1925 Constitution. While achieving stability and economic continuity, the constitution’s authoritarian origin and rigid framework became enduring sources of tension. Critics largely bypassed debates about its substantive content or performance and instead focused on two fundamental flaws: its lack of democratic legitimacy and its procedural rigidity, which, they argued, rendered it incapable of representing or adapting to societal needs. These critiques laid the groundwork for the constitutional process, illustrating how institutions, regardless of their achievements, remain tied to their origins and become focal points of scrutiny when they fail to evolve. <br><br>
-            <strong>Keywords: </strong>Chile; Constitutional Engineering; Authoritarian Design; Neoliberal Framework; Institutional Rigidity; Democratic Legitimacy; Constitutional Law.
+            <strong>Keywords: </strong>Chile; Constitutional Engineering; Authoritarian Design; Institutional Rigidity; Democratic Legitimacy; Constitutional Law.
           </p>
         </div>
       </div>
